result/subtask06-if/testcase02.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
> Insert `a` (addr: 1) to scope level 1
/mnt/c/Users/ncc/Desktop/2024-Spring-NCKU-CompilerHW2/input/subtask06-if/testcase02.cpp:2:11: error:  syntax error
     2 |    int a = 0,b = 0,c = 10;
       |          ^
Total lines: 2
